<resources>
    <string name="app_name">Weather Forecast</string>
    <string name="cities">cities</string>
    <string name="settings">settings</string>
    <string name="wind_speed">Wind speed</string>
    <string name="wind_degree">Wind degree</string>
    <string name="cloudiness">Cloudiness</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="visibility">Visibility</string>
    <string name="hourly">Hourly</string>
</resources>
